[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Menu/Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/Menu/home.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.12549, 0.6, 0.180392, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0901961, 0.235294, 0.333333, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.188235, 0.423529, 0.2, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0901961, 0.235294, 0.333333, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0.12549, 0.0745098, 0.0745098, 0.478431 )
shadow_size = 1
shadow_offset = Vector2( 0, 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.164706, 0.596078, 0.188235, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0901961, 0.235294, 0.333333, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0.12549, 0.0745098, 0.0745098, 0.6 )
shadow_size = 3
shadow_offset = Vector2( 0, 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.203922, 0.266667, 0.0392157, 0.654902 )
border_color = Color( 0.0901961, 0.235294, 0.333333, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0.12549, 0.0745098, 0.0745098, 0.6 )
shadow_size = 3
shadow_offset = Vector2( 0, 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.121569, 0.541176, 0.141176, 1 )
border_color = Color( 0.0901961, 0.235294, 0.333333, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 10

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="ColorRect" parent="."]
margin_left = -1.0
margin_top = -3.0
margin_right = 1023.0
margin_bottom = 597.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0.560784, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.389648
anchor_top = 0.315
anchor_right = 0.610352
anchor_bottom = 0.598333
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EasyButton" type="Button" parent="VBoxContainer"]
margin_right = 226.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Easy"
script = ExtResource( 2 )

[node name="MediumButton" type="Button" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 226.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Medium"
script = ExtResource( 2 )

[node name="HardButton" type="Button" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 226.0
margin_bottom = 169.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Hard"
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -255.0
margin_top = 79.0
margin_right = 255.0
margin_bottom = 147.0
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Game Mode"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/EasyButton" to="VBoxContainer/EasyButton" method="_on_EasyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MediumButton" to="VBoxContainer/MediumButton" method="_on_MeduimButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HardButton" to="VBoxContainer/HardButton" method="_on_HardButton_pressed"]
